[package]
name = "pinboard"
version = "0.1.0"
description = "Pinboard CLI client"
authors = ["David O'Rourke <david.orourke@gmail.com>"]

[dependencies]
clap = "2.29"
config = "0.7"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
mockito = "0.9"
url = "1.6"
